Update example
